--- a/blocklists.conf
+++ b/blocklists.conf
@@ -1,67 +1,131 @@
-# Pi-hole Blocklist Configuration
-# Format: url|name|category
-# Categories: advertising, tracking, malicious, suspicious, nsfw, comprehensive
-# Lines starting with # are comments and will be ignored
-# Disabled entries start with #DISABLED: and will be skipped
+# Zach's Lists - Default Block List
+# Last Updated: 19/12/24 - 13:00 - Even close to Christmas!
 
-# Comprehensive Blocklists
-https://raw.githubusercontent.com/StevenBlack/hosts/master/hosts|stevenblack_unified|comprehensive
+# ============================================================================
+# COMPREHENSIVE BLOCKLISTS (Primary Protection)
+# ============================================================================
+# Hagezi Ultimate - Maximum blocking
+https://cdn.jsdelivr.net/gh/hagezi/dns-blocklists@latest/hosts/ultimate.txt|hagezi_ultimate|comprehensive
+
+# OISD Big - Comprehensive all-in-one blocklist with excellent false-positive handling
 https://big.oisd.nl|oisd_big|comprehensive
-https://raw.githubusercontent.com/bigdargon/hostsVN/master/hosts|hostsvn|comprehensive
 
-# Advertising Blocklists
+# ============================================================================
+# THREAT INTELLIGENCE (Security Layer)
+# ============================================================================
+# Hagezi TIF Full - Complete threat intelligence
+https://cdn.jsdelivr.net/gh/hagezi/dns-blocklists@latest/adblock/tif.txt|hagezi_tif_full|malicious
+
+# ============================================================================
+# ADVERTISING BLOCKLISTS (Firebog Green-Ticked)
+# ============================================================================
+# AdAway - Mobile-focused ad blocking, low false positives
 https://adaway.org/hosts.txt|adaway|advertising
+
+# Peter Lowe's Ad Servers - Well-maintained, conservative list
+https://pgl.yoyo.org/adservers/serverlist.php?hostformat=hosts&showintro=0&mimetype=plaintext|pgl_yoyo|advertising
+
+# AdGuard DNS filter - Comprehensive ad blocking
 https://v.firebog.net/hosts/AdguardDNS.txt|adguard_dns|advertising
-https://v.firebog.net/hosts/Admiral.txt|admiral|advertising
+
+# Anudeep's Adservers - Curated ad server list
 https://raw.githubusercontent.com/anudeepND/blacklist/master/adservers.txt|anudeep_adservers|advertising
+
+# EasyList (converted for DNS) - Industry standard
 https://v.firebog.net/hosts/Easylist.txt|easylist|advertising
-https://pgl.yoyo.org/adservers/serverlist.php?hostformat=hosts&showintro=0&mimetype=plaintext|yoyo_adservers|advertising
-https://raw.githubusercontent.com/FadeMind/hosts.extras/master/UncheckyAds/hosts|unchecky_ads|advertising
-https://raw.githubusercontent.com/bigdargon/hostsVN/master/hosts|hostsvn_ads|advertising
 
-# Tracking Blocklists
+# Admiral Anti-Adblock - Blocks anti-adblock scripts
+https://v.firebog.net/hosts/Admiral.txt|admiral_antiadblock|advertising
+
+# ============================================================================
+# TRACKING & TELEMETRY BLOCKLISTS (Firebog Green-Ticked)
+# ============================================================================
+# EasyPrivacy - Comprehensive tracking protection
 https://v.firebog.net/hosts/Easyprivacy.txt|easyprivacy|tracking
-https://v.firebog.net/hosts/Prigent-Ads.txt|prigent_ads_tracking|tracking
-https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.2o7Net/hosts|2o7net_trackers|tracking
+
+# Prigent Ads - French university maintained tracker list
+https://v.firebog.net/hosts/Prigent-Ads.txt|prigent_ads|tracking
+
+# FadeMind 2o7 Network - Omniture/Adobe Analytics trackers
+https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.2o7Net/hosts|fademind_2o7|tracking
+
+# Fanboy's Enhanced Tracking - Additional tracking domains
+https://www.github.developerdan.com/hosts/lists/ads-and-tracking-extended.txt|developerdan_tracking|tracking
+
+# First-party trackers - Blocks trackers disguised as first-party
+https://hostfiles.frogeye.fr/firstparty-trackers-hosts.txt|frogeye_firstparty|tracking
+
+# Windows Spy Blocker - Microsoft telemetry
 https://raw.githubusercontent.com/crazy-max/WindowsSpyBlocker/master/data/hosts/spy.txt|windows_spy_blocker|tracking
-https://hostfiles.frogeye.fr/firstparty-trackers-hosts.txt|firstparty_trackers|tracking
-https://raw.githubusercontent.com/Perflyst/PiHoleBlocklist/master/android-tracking.txt|android_tracking|tracking
-https://raw.githubusercontent.com/Perflyst/PiHoleBlocklist/master/SmartTV.txt|smarttv_tracking|tracking
-https://raw.githubusercontent.com/Perflyst/PiHoleBlocklist/master/AmazonFireTV.txt|firetv_tracking|tracking
-https://gitlab.com/quidsup/notrack-blocklists/raw/master/notrack-blocklist.txt|notrack_blocklist|tracking
 
-# Suspicious Blocklists
-https://raw.githubusercontent.com/PolishFiltersTeam/KADhosts/master/KADhosts.txt|polish_kad_hosts|suspicious
-https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.Spam/hosts|fademind_spam|suspicious
-https://v.firebog.net/hosts/static/w3kbl.txt|w3kbl|suspicious
-https://raw.githubusercontent.com/matomo-org/referrer-spam-blacklist/master/spammers.txt|matomo_spam|suspicious
-https://someonewhocares.org/hosts/zero/hosts|someonewhocares|suspicious
-https://raw.githubusercontent.com/VeleSila/yhosts/master/hosts|velesila|suspicious
-https://winhelp2002.mvps.org/hosts.txt|winhelp2002|suspicious
-https://v.firebog.net/hosts/neohostsbasic.txt|neohosts|suspicious
-https://raw.githubusercontent.com/RooneyMcNibNug/pihole-stuff/master/SNAFU.txt|snafu|suspicious
-https://paulgb.github.io/BarbBlock/blacklists/hosts-file.txt|barbblock|suspicious
+# Android Tracking - Mobile device trackers
+https://raw.githubusercontent.com/Perflyst/PiHoleBlocklist/master/android-tracking.txt|perflyst_android|tracking
 
-# Malicious Blocklists
+# Smart TV Tracking - TV telemetry and ads
+https://raw.githubusercontent.com/Perflyst/PiHoleBlocklist/master/SmartTV.txt|perflyst_smarttv|tracking
+
+# Amazon Fire TV - Fire TV specific trackers
+https://raw.githubusercontent.com/Perflyst/PiHoleBlocklist/master/AmazonFireTV.txt|perflyst_firetv|tracking
+
+# NoTrack Blocklist - Additional tracker blocking
+https://gitlab.com/quidsup/notrack-blocklists/raw/master/notrack-blocklist.txt|quidsup_notrack|tracking
+
+# ============================================================================
+# MALICIOUS & PHISHING BLOCKLISTS (Firebog Green-Ticked)
+# ============================================================================
+# DandelionSprout Anti-Malware - Actively maintained malware list
 https://raw.githubusercontent.com/DandelionSprout/adfilt/master/Alternate%20versions%20Anti-Malware%20List/AntiMalwareHosts.txt|dandelion_antimalware|malicious
-https://v.firebog.net/hosts/Prigent-Crypto.txt|prigent_crypto|malicious
-https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.Risk/hosts|risk_hosts|malicious
-https://bitbucket.org/ethanr/dns-blacklists/raw/8575c9f96e5b4a1308f2f12394abd86d0927a4a0/bad_lists/Mandiant_APT1_Report_Appendix_D.txt|mandiant_apt1|malicious
-https://phishing.army/download/phishing_army_blocklist_extended.txt|phishing_army|malicious
-https://gitlab.com/quidsup/notrack-blocklists/raw/master/notrack-malware.txt|notrack_malware|malicious
-https://v.firebog.net/hosts/RPiList-Malware.txt|rpi_malware|malicious
-https://raw.githubusercontent.com/Spam404/lists/master/main-blacklist.txt|spam404_blacklist|malicious
-https://raw.githubusercontent.com/AssoEchap/stalkerware-indicators/master/generated/hosts|stalkerware_indicators|malicious
-https://urlhaus.abuse.ch/downloads/hostfile/|urlhaus_malicious|malicious
-https://malware-filter.gitlab.io/malware-filter/phishing-filter-hosts.txt|malware_filter_phishing|malicious
-https://v.firebog.net/hosts/Prigent-Malware.txt|prigent_malware|malicious
-https://raw.githubusercontent.com/jarelllama/Scam-Blocklist/main/lists/wildcard_domains/scams.txt|scams_wildcard|malicious
-https://v.firebog.net/hosts/RPiList-Phishing.txt|rpi_phishing|malicious
-https://raw.githubusercontent.com/anudeepND/blacklist/refs/heads/master/CoinMiner.txt|anudeepnd_miners|malicious
 
-# NSFW Blocklists
-https://raw.githubusercontent.com/chadmayfield/my-pihole-blocklists/master/lists/pi_blocklist_porn_top1m.list|porn_top1m|nsfw
-https://v.firebog.net/hosts/Prigent-Adult.txt|prigent_adult|nsfw
+# Phishing Army - Extended phishing blocklist
+https://phishing.army/download/phishing_army_blocklist_extended.txt|phishing_army|malicious
+
+# URLhaus - Malware distribution URLs
+https://urlhaus.abuse.ch/downloads/hostfile/|urlhaus|malicious
+
+# Stalkerware Indicators - Blocks stalkerware/spyware domains
+https://raw.githubusercontent.com/AssoEchap/stalkerware-indicators/master/generated/hosts|stalkerware_indicators|malicious
+
+# Spam404 - Scam and spam domains
+https://raw.githubusercontent.com/Spam404/lists/master/main-blacklist.txt|spam404|malicious
+
+# Curbengh Phishing Filter - Additional phishing protection
+https://malware-filter.gitlab.io/malware-filter/phishing-filter-hosts.txt|curbengh_phishing|malicious
+
+# Scam Blocklist - Active scam domain tracking
+https://raw.githubusercontent.com/jarelllama/Scam-Blocklist/main/lists/wildcard_domains/scams.txt|jarelllama_scams|malicious
+
+# NoTrack Malware - Additional malware domains
+https://gitlab.com/quidsup/notrack-blocklists/raw/master/notrack-malware.txt|quidsup_malware|malicious
+
+# Disconnect Malvertising - Malicious advertising networks
+https://s3.amazonaws.com/lists.disconnect.me/simple_malvertising.txt|disconnect_malvertising|malicious
+
+# ============================================================================
+# SUSPICIOUS BLOCKLISTS (Firebog Green-Ticked)
+# ============================================================================
+# Polish KAD Hosts - Fraud, scam, and suspicious domains
+https://raw.githubusercontent.com/PolishFiltersTeam/KADhosts/master/KADhosts.txt|polish_kad_hosts|suspicious
+
+# ============================================================================
+# POP-UP & MALVERTISING
+# ============================================================================
+# Hagezi Pop-Up Ads - Annoying and malicious pop-ups
+https://cdn.jsdelivr.net/gh/hagezi/dns-blocklists@latest/adblock/popupads.txt|hagezi_popupads|advertising
+
+# Prigent Cryptojacking - Cryptominer blocking
+https://v.firebog.net/hosts/Prigent-Crypto.txt|prigent_crypto|suspicious
+
+# ============================================================================
+# NSFW BLOCKLISTS
+# ============================================================================
+# OISD NSFW - Comprehensive adult content blocking
 https://nsfw.oisd.nl|oisd_nsfw|nsfw
 
-# Add new categories or lists here
+# ============================================================================
+# OPTIONAL (May cause minor breakage)
+# ============================================================================
+# Hagezi Pro++ - More aggressive, may cause some breakage
+#DISABLED: https://cdn.jsdelivr.net/gh/hagezi/dns-blocklists@latest/hosts/pro.plus.txt|hagezi_proplus|comprehensive
+
+# Multi-party trackers - Blocks cross-site tracking (can break some sites)
+#DISABLED: https://hostfiles.frogeye.fr/multiparty-trackers-hosts.txt|frogeye_multiparty|tracking
