Add Prigent Ads blocklist and adjust comments

--- a/blocklists.conf
+++ b/blocklists.conf
@@ -121,6 +121,9 @@ https://v.firebog.net/hosts/Prigent-Crypto.txt|prigent_crypto|suspicious
 # OISD NSFW - Comprehensive adult content blocking
 https://nsfw.oisd.nl|oisd_nsfw|nsfw
 
+# Prigent Ads - French university maintained adult list
+https://v.firebog.net/hosts/Prigent-Adult.txt|prigent_adult|nsfw
+
 # ============================================================================
 # OPTIONAL (May cause minor breakage)
 # ============================================================================
