--- a/blocklists.conf
+++ b/blocklists.conf
@@ -1,134 +1,65 @@
 # Zach's Lists - Default Block List
-# Last Updated: 19/12/24 - 13:00 - Even close to Christmas!
+# Last Updated: 28/12/25 - 17:15 - Hi Guys! I hope you had a good Christmas.
 
 # ============================================================================
-# COMPREHENSIVE BLOCKLISTS (Primary Protection)
+# COMPREHENSIVE BLOCKLISTS
 # ============================================================================
-# Hagezi Ultimate - Maximum blocking
-https://cdn.jsdelivr.net/gh/hagezi/dns-blocklists@latest/hosts/ultimate.txt|hagezi_ultimate|comprehensive
-
-# OISD Big - Comprehensive all-in-one blocklist with excellent false-positive handling
+https://cdn.jsdelivr.net/gh/hagezi/dns-blocklists@latest/hosts/pro.txt|hagezi_pro|comprehensive
 https://big.oisd.nl|oisd_big|comprehensive
 
 # ============================================================================
-# THREAT INTELLIGENCE (Security Layer)
+# THREAT INTELLIGENCE
 # ============================================================================
-# Hagezi TIF Full - Complete threat intelligence
 https://cdn.jsdelivr.net/gh/hagezi/dns-blocklists@latest/adblock/tif.txt|hagezi_tif_full|malicious
 
 # ============================================================================
-# ADVERTISING BLOCKLISTS (Firebog Green-Ticked)
+# STREAMING DEVICES & SMART TV
 # ============================================================================
-# AdAway - Mobile-focused ad blocking, low false positives
-https://adaway.org/hosts.txt|adaway|advertising
-
-# Peter Lowe's Ad Servers - Well-maintained, conservative list
-https://pgl.yoyo.org/adservers/serverlist.php?hostformat=hosts&showintro=0&mimetype=plaintext|pgl_yoyo|advertising
-
-# AdGuard DNS filter - Comprehensive ad blocking
-https://v.firebog.net/hosts/AdguardDNS.txt|adguard_dns|advertising
-
-# Anudeep's Adservers - Curated ad server list
-https://raw.githubusercontent.com/anudeepND/blacklist/master/adservers.txt|anudeep_adservers|advertising
-
-# EasyList (converted for DNS) - Industry standard
-https://v.firebog.net/hosts/Easylist.txt|easylist|advertising
-
-# Admiral Anti-Adblock - Blocks anti-adblock scripts
-https://v.firebog.net/hosts/Admiral.txt|admiral_antiadblock|advertising
-
-# ============================================================================
-# TRACKING & TELEMETRY BLOCKLISTS (Firebog Green-Ticked)
-# ============================================================================
-# EasyPrivacy - Comprehensive tracking protection
-https://v.firebog.net/hosts/Easyprivacy.txt|easyprivacy|tracking
-
-# Prigent Ads - French university maintained tracker list
-https://v.firebog.net/hosts/Prigent-Ads.txt|prigent_ads|tracking
-
-# FadeMind 2o7 Network - Omniture/Adobe Analytics trackers
-https://raw.githubusercontent.com/FadeMind/hosts.extras/master/add.2o7Net/hosts|fademind_2o7|tracking
-
-# Fanboy's Enhanced Tracking - Additional tracking domains
-https://www.github.developerdan.com/hosts/lists/ads-and-tracking-extended.txt|developerdan_tracking|tracking
-
-# First-party trackers - Blocks trackers disguised as first-party
-https://hostfiles.frogeye.fr/firstparty-trackers-hosts.txt|frogeye_firstparty|tracking
-
-# Windows Spy Blocker - Microsoft telemetry
-https://raw.githubusercontent.com/crazy-max/WindowsSpyBlocker/master/data/hosts/spy.txt|windows_spy_blocker|tracking
-
-# Android Tracking - Mobile device trackers
-https://raw.githubusercontent.com/Perflyst/PiHoleBlocklist/master/android-tracking.txt|perflyst_android|tracking
-
-# Smart TV Tracking - TV telemetry and ads
 https://raw.githubusercontent.com/Perflyst/PiHoleBlocklist/master/SmartTV.txt|perflyst_smarttv|tracking
-
-# Amazon Fire TV - Fire TV specific trackers
-https://raw.githubusercontent.com/Perflyst/PiHoleBlocklist/master/AmazonFireTV.txt|perflyst_firetv|tracking
-
-# NoTrack Blocklist - Additional tracker blocking
-https://gitlab.com/quidsup/notrack-blocklists/raw/master/notrack-blocklist.txt|quidsup_notrack|tracking
+https://raw.githubusercontent.com/hagezi/dns-blocklists/main/domains/native.roku.txt|hagezi_roku|tracking
+https://raw.githubusercontent.com/hagezi/dns-blocklists/main/domains/native.lgwebos.txt|hagezi_lg|tracking
 
 # ============================================================================
-# MALICIOUS & PHISHING BLOCKLISTS (Firebog Green-Ticked)
+# ADVERTISING BLOCKLISTS
 # ============================================================================
-# DandelionSprout Anti-Malware - Actively maintained malware list
-https://raw.githubusercontent.com/DandelionSprout/adfilt/master/Alternate%20versions%20Anti-Malware%20List/AntiMalwareHosts.txt|dandelion_antimalware|malicious
-
-# Phishing Army - Extended phishing blocklist
-https://phishing.army/download/phishing_army_blocklist_extended.txt|phishing_army|malicious
-
-# URLhaus - Malware distribution URLs
-https://urlhaus.abuse.ch/downloads/hostfile/|urlhaus|malicious
-
-# Stalkerware Indicators - Blocks stalkerware/spyware domains
-https://raw.githubusercontent.com/AssoEchap/stalkerware-indicators/master/generated/hosts|stalkerware_indicators|malicious
-
-# Spam404 - Scam and spam domains
-https://raw.githubusercontent.com/Spam404/lists/master/main-blacklist.txt|spam404|malicious
-
-# Curbengh Phishing Filter - Additional phishing protection
-https://malware-filter.gitlab.io/malware-filter/phishing-filter-hosts.txt|curbengh_phishing|malicious
-
-# Scam Blocklist - Active scam domain tracking
-https://raw.githubusercontent.com/jarelllama/Scam-Blocklist/main/lists/wildcard_domains/scams.txt|jarelllama_scams|malicious
-
-# NoTrack Malware - Additional malware domains
-https://gitlab.com/quidsup/notrack-blocklists/raw/master/notrack-malware.txt|quidsup_malware|malicious
-
-# Disconnect Malvertising - Malicious advertising networks
-https://s3.amazonaws.com/lists.disconnect.me/simple_malvertising.txt|disconnect_malvertising|malicious
-
-# ============================================================================
-# SUSPICIOUS BLOCKLISTS (Firebog Green-Ticked)
-# ============================================================================
-# Polish KAD Hosts - Fraud, scam, and suspicious domains
-https://raw.githubusercontent.com/PolishFiltersTeam/KADhosts/master/KADhosts.txt|polish_kad_hosts|suspicious
-
-# ============================================================================
-# POP-UP & MALVERTISING
-# ============================================================================
-# Hagezi Pop-Up Ads - Annoying and malicious pop-ups
+https://adaway.org/hosts.txt|adaway|advertising
+https://pgl.yoyo.org/adservers/serverlist.php?hostformat=hosts&showintro=0&mimetype=plaintext|pgl_yoyo|advertising
+https://raw.githubusercontent.com/anudeepND/blacklist/master/adservers.txt|anudeep_adservers|advertising
 https://cdn.jsdelivr.net/gh/hagezi/dns-blocklists@latest/adblock/popupads.txt|hagezi_popupads|advertising
 
-# Prigent Cryptojacking - Cryptominer blocking
+# ============================================================================
+# TRACKING & TELEMETRY BLOCKLISTS
+# ============================================================================
+https://hostfiles.frogeye.fr/firstparty-trackers-hosts.txt|frogeye_firstparty|tracking
+https://raw.githubusercontent.com/nextdns/cname-cloaking-blocklist/master/domains|nextdns_cname|tracking
+https://raw.githubusercontent.com/Perflyst/PiHoleBlocklist/master/android-tracking.txt|perflyst_android|tracking
+https://raw.githubusercontent.com/hagezi/dns-blocklists/main/domains/native.winoffice.txt|hagezi_windows|tracking
+https://raw.githubusercontent.com/hagezi/dns-blocklists/main/domains/native.apple.txt|hagezi_apple|tracking
+https://raw.githubusercontent.com/hagezi/dns-blocklists/main/domains/native.samsung.txt|hagezi_samsung_mobile|tracking
+https://raw.githubusercontent.com/hagezi/dns-blocklists/main/domains/native.xiaomi.txt|hagezi_xiaomi|tracking
+https://raw.githubusercontent.com/hagezi/dns-blocklists/main/domains/native.huawei.txt|hagezi_huawei|tracking
+
+# ============================================================================
+# MALICIOUS & PHISHING BLOCKLISTS
+# ============================================================================
+https://urlhaus.abuse.ch/downloads/hostfile/|urlhaus|malicious
+https://phishing.army/download/phishing_army_blocklist_extended.txt|phishing_army|malicious
+https://raw.githubusercontent.com/AssoEchap/stalkerware-indicators/master/generated/hosts|stalkerware_indicators|malicious
+https://raw.githubusercontent.com/jarelllama/Scam-Blocklist/main/lists/adblock/scams.txt|jarelllama_scams|malicious
+https://cdn.jsdelivr.net/gh/hagezi/dns-blocklists@latest/adblock/fake.txt|hagezi_fake|malicious
+https://raw.githubusercontent.com/DandelionSprout/adfilt/master/Alternate%20versions%20Anti-Malware%20List/AntiMalwareHosts.txt|dandelion_antimalware|malicious
+https://malware-filter.gitlab.io/malware-filter/phishing-filter-hosts.txt|curbengh_phishing|malicious
+https://raw.githubusercontent.com/Spam404/lists/master/main-blacklist.txt|spam404|malicious
+https://cdn.jsdelivr.net/gh/hagezi/dns-blocklists@latest/adblock/doh-vpn-proxy-bypass.txt|hagezi_bypass|malicious
+https://cdn.jsdelivr.net/gh/hagezi/dns-blocklists@latest/adblock/dyndns.txt|hagezi_dyndns|malicious
+
+# ============================================================================
+# SUSPICIOUS BLOCKLISTS
+# ============================================================================
 https://v.firebog.net/hosts/Prigent-Crypto.txt|prigent_crypto|suspicious
+https://raw.githubusercontent.com/PolishFiltersTeam/KADhosts/master/KADhosts.txt|polish_kad_hosts|suspicious
 
 # ============================================================================
 # NSFW BLOCKLISTS
 # ============================================================================
-# OISD NSFW - Comprehensive adult content blocking
 https://nsfw.oisd.nl|oisd_nsfw|nsfw
-
-# Prigent Ads - French university maintained adult list
-https://v.firebog.net/hosts/Prigent-Adult.txt|prigent_adult|nsfw
-
-# ============================================================================
-# OPTIONAL (May cause minor breakage)
-# ============================================================================
-# Hagezi Pro++ - More aggressive, may cause some breakage
-#DISABLED: https://cdn.jsdelivr.net/gh/hagezi/dns-blocklists@latest/hosts/pro.plus.txt|hagezi_proplus|comprehensive
-
-# Multi-party trackers - Blocks cross-site tracking (can break some sites)
-#DISABLED: https://hostfiles.frogeye.fr/multiparty-trackers-hosts.txt|frogeye_multiparty|tracking
