fix: remove hagezi_bypass to resolve VPN/DNS false positives
Removes doh-vpn-proxy-bypass.txt which was blocking legitimate services:
- Cloudflare DNS (cloudflare-dns.com, one.one.one.one)
- Google DNS (dns.google)
- Quad9 (dns.quad9.net)
- Mullvad VPN (mullvad.net)
- ProtonVPN (protonvpn.com)
- AdGuard VPN (adguard-vpn.com)
- Azure VPN (vpn.azure.com)
- And many more VPN/DoH providers

Fixes #7, #8, #9, #10, #11, #12, #13

--- a/blocklists.conf
+++ b/blocklists.conf
@@ -1,5 +1,5 @@
 # Zach's Lists - Default Block List
-# Last Updated: 28/12/25 - 17:15 - Hi Guys! I hope you had a good Christmas.
+# Last Updated: 13/01/26 - 02:07 - Removed hagezi_bypass to fix VPN/DNS false positives
 
 # ============================================================================
 # COMPREHENSIVE BLOCKLISTS
@@ -50,7 +50,6 @@ https://cdn.jsdelivr.net/gh/hagezi/dns-blocklists@latest/adblock/fake.txt|hagezi
 https://raw.githubusercontent.com/DandelionSprout/adfilt/master/Alternate%20versions%20Anti-Malware%20List/AntiMalwareHosts.txt|dandelion_antimalware|malicious
 https://malware-filter.gitlab.io/malware-filter/phishing-filter-hosts.txt|curbengh_phishing|malicious
 https://raw.githubusercontent.com/Spam404/lists/master/main-blacklist.txt|spam404|malicious
-https://cdn.jsdelivr.net/gh/hagezi/dns-blocklists@latest/adblock/doh-vpn-proxy-bypass.txt|hagezi_bypass|malicious
 https://cdn.jsdelivr.net/gh/hagezi/dns-blocklists@latest/adblock/dyndns.txt|hagezi_dyndns|malicious
 
 # ============================================================================
